tests/baselines/reference/exportStarForValuesInSystem(strict=true).errors.txt
file1.ts(1,24): error TS7008: Member 'x' implicitly has an 'any' type.


==== file1.ts (1 errors) ====
    export interface Foo { x }
                           ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    
==== file2.ts (0 errors) ====
    export * from "file1"
    var x = 1;